moved to autogluon docker image

--- a/valohai.yaml
+++ b/valohai.yaml
@@ -1,6 +1,6 @@
 - step:
     name: autogluon
-    image: python:3.10
+    image: autogluon/autogluon:1.0.0-cpu-framework-ubuntu20.04-py3.10
     parameters:
         - name: target_column
           type: string
@@ -10,6 +10,7 @@
           filename: train.csv
         - name: test
           filename: test.csv
+          optional: true
     command:
     - pip install -r requirements.txt
     - python autogluon.py
