--- a/valohai.yaml
+++ b/valohai.yaml
@@ -21,8 +21,10 @@
     inputs:
       - name: model
         optional: false
+        default: model://automl/2
       - name: files
         optional: false
+        default: datum://0193971f-97a6-8b7e-87db-583ecbd45f56
     command:
     - pip install -r requirements.txt
     - python predict.py
