--- a/valohai.yaml
+++ b/valohai.yaml
@@ -4,10 +4,12 @@
     parameters:
         - name: target_column
           type: string
+          optional: false
+          default: class
     inputs:
       - name: train
         filename: train.csv
-        optional: false
+        default: datum://0193971f-97a6-8b7e-87db-583ecbd45f56
       - name: test
         filename: test.csv
         optional: true
@@ -21,9 +23,12 @@
     inputs:
       - name: model
         optional: false
+        keep-directories: suffix
       - name: files
         optional: false
+        default: datum://0193971f-97a6-8b7e-87db-583ecbd45f56
     command:
     - pip install -r requirements.txt
+    - pip install debugpy
     - python predict.py
       
